(Fix): Fix menu button alignment

--- a/themes/hugo-spartan/static/css/style.css
+++ b/themes/hugo-spartan/static/css/style.css
@@ -314,7 +314,7 @@ input[type=checkbox].toggle,
 .hamburger {
     position: absolute;
     right: 0;
-    top: 3.5rem;
+    top: 2.75rem;
     margin: 0;
 }
 
